# rdk-x5-eldercare-robot

./: .gitignore  README.md  README_cn.md
PWM机械臂/: OpenArmSTM32.uvopt  OpenArmSTM32.uvproj
PWM机械臂/USER/: App.c  App.h  Bluetooth.c  PCMsg.c  PS2GamePad.c  PWM.c  main.c
sensor_v2.1/: Template.uvoptx  Template.uvprojx
sensor_v2.1/APP/HC-SR04/: ultrasonic.c  ultrasonic.h
sensor_v2.1/APP/IR/: IR.c  IR.h
sensor_v2.1/APP/MQ-2/: mq2.c  mq2.h
sensor_v2.1/APP/USART2/: USART2.c  USART2.h
sensor_v2.1/APP/adc/: adcx.c  adcx.h
sensor_v2.1/APP/beep/: beep.c  beep.h
sensor_v2.1/APP/control/: control.c  control.h
sensor_v2.1/APP/dc_motor/: dc_motor.c  dc_motor.h
sensor_v2.1/APP/debug_usart/: debug_usart.c  debug_usart.h
sensor_v2.1/APP/dht11/: dht11.c  dht11.h
sensor_v2.1/APP/exti/: exti.c
sensor_v2.1/APP/hcsr04/: hcsr04.c  hcsr04.h
sensor_v2.1/APP/hongwai/: bsp_tcrt5000.c  bsp_tcrt5000.h
sensor_v2.1/APP/iic/: iic.c  iic.h
sensor_v2.1/APP/key/: key.c  key.h
sensor_v2.1/APP/led/: led.c  led.h
sensor_v2.1/APP/leddz/: leddz.c  leddz.h
sensor_v2.1/APP/pwm/: pwm.c  pwm.h
sensor_v2.1/APP/smg/: smg.c  (+1 more)
sensor_v2.1/Public/: SysTick.c  SysTick.h  usart.c  usart.h
sensor_v2.1/User/: main.c
伺服电机控制/: readme.md
伺服电机控制/伺服电机脉冲发送控制（c8t6）/: Template.uvoptx  Template.uvprojx
六足机器人代码/imu_20498/: package.xml  setup.py
六足机器人代码/imu_20498/imu_20498/: __init__.py
六足机器人代码/imu_20498/launch/: imu_20498.launch.py
六足机器人代码/stm32_to_chassis/: package.xml  setup.py  stm32_to_chassis_bridge.py
六足机器人代码/stm32_to_chassis/launch/: stm32_to_chassis.launch.py
六足机器人代码/wheeltec_nav2/: CMakeLists.txt  package.xml
六足机器人代码/wheeltec_nav2/launch/: save_map.launch.py  wheeltec_nav2.launch.py
六足机器人代码/wheeltec_nav2/param/wheeltec_params/: param_mini_mec.yaml  param_mini_omni.yaml
大车代码/大车底盘/: F407VET6_Mini小车_STM32源码_2022.01.26(霍尔编码器).hex
(+42 files in other folders)
