<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_20498</name>
  <version>1.0.0</version>
  <description>IMU20498 9-axis IMU driver via USB1</description>
  <maintainer email="ycy@todo.todo">ycy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-serial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>