<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.ros.org/schema/package_format3"?>
<package format="3">
  <name>stm32_to_chassis</name>
  <version>1.0.0</version>
  <description>STM32 chassis protocol to ROS robot chassis bridge</description>
  <maintainer email="sunrise@example.com">sunrise</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>